--- a/network/CMakeLists.txt
+++ b/network/CMakeLists.txt
@@ -7,12 +7,12 @@ set(CMAKE_C_STANDARD 99)
 #add_executable(echoClient  csapp.h csapp.c  echoClient.c)
 
 ##demo
-##add_executable(adder include/csapp.h network/csapp.c network/adder.c network/multipleIO.c network/echoServers.c include/macro.h)
+add_executable(adder ../include/csapp.h csapp.c adder.c)
 
 ##Unit test
-add_executable(main include/csapp.h main.c)
 enable_testing()
-add_test(NAME main
-        COMMAND $<TARGET_FILE:main>#
+
+add_test(NAME adder
+        COMMAND $<TARGET_FILE:adder>#
         )
 
