--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,8 @@ set(CMAKE_C_STANDARD 99)
 ##add_executable(adder include/csapp.h network/csapp.c network/adder.c network/multipleIO.c network/echoServers.c include/macro.h)
 
 ##Unit test
-add_executable(main include/csapp.h main.c)
+#add_executable(main include/csapp.h main.c)
+add_executable(main include/csapp.h network/echoClient.c network/csapp.c)
 enable_testing()
 add_test(NAME main
         COMMAND $<TARGET_FILE:main>#
