--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.21)
-project(NetworkProgramingInC C)
+project(NetworkProcedure C)
 
-set(CMAKE_C_STANDARD 99)
+#set(CMAKE_C_STANDARD 99)
+set (CMAKE_CXX_STANDARD 17)
 
 #add_executable(Tiny csapp.h csapp.c Tiny.c )
 #add_executable(echoClient  csapp.h csapp.c  echoClient.c)
@@ -11,9 +12,6 @@ set(CMAKE_C_STANDARD 99)
 
 ##Unit test
 #add_executable(main include/csapp.h main.c)
-add_executable(main include/csapp.h network/echoClient.c network/csapp.c)
-enable_testing()
-add_test(NAME main
-        COMMAND $<TARGET_FILE:main>#
-        )
+add_executable(main include/csapp.h network/Client/echoClient.c network/csapp.c)
+
 
